# Water-Tank-Management

./: README.md  actuators.py  automation.py  config.py  config.yaml  control_logic.py  data_collection.py  dataset_analysis.py.ipynb  dataset_generator.py  main.py  ml_model.py  model_test.py  model_training.ipynb  model_training_knn.ipynb  pump_controller.py  pyproject.toml  requirements.txt  run_automation.sh  run_backend.sh  sensors.py  water_tank.db
backend/: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  run.sh  schemas.py
backend/app/: analytics.py  db.py  main.py  storage.py
backend/water_tank_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
control/: control.ino
data/: training_dataset_01.csv  training_dataset_02.csv  training_dataset_03.csv  training_dataset_100.csv  training_dataset_1000.csv  training_dataset_30.csv  training_dataset_365.csv  training_dataset_730.csv  training_dataset_anomalies.csv
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: Dashboard.tsx  Issues.tsx  LoginCard.tsx
frontend/lib/: api.ts
model/: aqua_man_scaler.pkl  leak_detection_knn_model.pkl  leak_detector_scaler.pkl  leak_scaler.pkl  pump_control_knn_model.pkl  pump_scaler.pkl
notebooks/: dataset_analysis.py.ipynb  model_training_knn.ipynb
water_tank/: __init__.py
water_tank/actuators/: relay.py
water_tank/analytics/: leak_detection.py  logger.py
water_tank/control/: pump_controller.py
water_tank/hardware/: gpio.py
water_tank/sensors/: level_sensor.py
water_tank/util/: config.py  scheduler.py
